fixed overflow error

--- a/src/index.css
+++ b/src/index.css
@@ -118,11 +118,14 @@ video{
   position: absolute;
   top:0px;
   left: 0px;
+  /* overflow-y: hidden; */
 }
 .home_section {
   height: 87.5vh;
-  position: relative;
-  top:101.4px;
+  margin-top: 101.4px;
+  /* position: relative; */
+  /* top:101.4px; */
+  /* overflow-y: hidden; */
 }
 
 .home_section::before{
@@ -133,6 +136,7 @@ video{
   left:0px;
   width:100%;
   height:100%;
+  /* overflow-y: hidden; */
 }
 .home_content{
   height:100%;
@@ -140,7 +144,6 @@ video{
   flex-direction: column;
   justify-content: center;
   color:#fff;
-  text-align: center;
   text-align: left;
 }
 .home_content *{
